Update 1931 회의실 배정.md

--- a/파이썬/정렬/1931 회의실 배정.md
+++ b/파이썬/정렬/1931 회의실 배정.md
@@ -3,9 +3,9 @@
 ### 문제 아이디어
 
 - 회의가 **끝나는 시간 기준**으로 정렬
-- 이후 회의 종료 시간 기준으로 조건을 만족하는지 체크하여 더해주면 끝 
+- 이후 회의 종료 시간 기준으로 조건을 만족하는지 체크하여 더해주면 끝이난다.
 
-https://gist.github.com/tuuuuuuuna/366a1dbf552dc48dbb82e683b3e96062.js
+<script src="https://gist.github.com/tuuuuuuuna/366a1dbf552dc48dbb82e683b3e96062.js"></script>
 
 ---
 
